--- a/front/css/_media.scss
+++ b/front/css/_media.scss
@@ -63,6 +63,9 @@
     width: 100%;
     padding-top: (3 / 4) * 100%;
   }
+  &.active-speaker {
+    outline: 1px solid $color_palette7;
+  }
   > .video-block {
     background-color: #000000;
     position: absolute;
